# QuantFabric

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  book.toml  build_clear.sh  build_release.sh
doc/: MDBOOK_GUIDE.md  README.md  SUMMARY.md  book.toml  faq.md  glossary.md
doc/architecture/: SystemArchitecture.md
doc/deployment/: DeploymentGuide.md
doc/modules/: SHMServer.md  XAPI.md  XMarketCenter.md  XMonitor.md  XServer.md  XTrader.md
doc/modules/SHMServer/: 01_Architecture.md  README.md
doc/modules/Utils/: 00_Overview.md  README.md
doc/modules/XMarketCenter/: 01_DesignPhilosophy.md  02_TechnicalImplementation.md  03_PluginDevelopment.md  README.md
doc/modules/XMonitor/: 01_GUI_Architecture.md  README.md
doc/modules/XQuant/: 00_Overview.md  README.md
doc/modules/XRiskJudge/: 00_Overview.md  README.md
doc/modules/XServer/: 01_Middleware Architecture.md  README.md
doc/modules/XTrader/: 01_DesignArchitecture.md  02_TechnicalImplementation.md  03_PluginDevelopment.md  README.md
doc/modules/XWatcher/: 00_Overview.md  README.md
